--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
                 <div class="other">
                     <div class="grad"></div>
-                    <img class="ico" src="Img/SVG/Team.svg" alt="">
+                    <img class="ico" src="Team.svg" alt="">
                     <h1>super team</h1>
                 </div>
 
-                <img class="Mn" src="Img/Layer 44.jpg" alt="">
+                <img class="Mn" src="Layer 44.jpg" alt="">
 
             </div>
 
@@ -163,11 +163,11 @@
 
                 <div class="other">
                     <div class="grad"></div>
-                    <img class="ico" src="Img/SVG/Team.svg" alt="">
+                    <img class="ico" src="Team.svg" alt="">
                     <h1>super team</h1>
                 </div>
 
-                <img class="Mn" src="Img/Layer 39.jpg" alt="">
+                <img class="Mn" src="Layer 39.jpg" alt="">
 
             </div>
 
@@ -180,11 +180,11 @@
 
                 <div class="other">
                     <div class="grad"></div>
-                    <img class="ico" src="Img/SVG/Team.svg" alt="">
+                    <img class="ico" src="Team.svg" alt="">
                     <h1>super team</h1>
                 </div>
 
-                <img class="Mn" src="Img/Layer 41.jpg" alt="">
+                <img class="Mn" src="Layer 41.jpg" alt="">
 
             </div>
 
@@ -261,7 +261,7 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="el One">
 
-                <img class="P one" src="Img/SVG/Photography.svg" alt="">
+                <img class="P one" src="Photography.svg" alt="">
 
                 <div class="text">
                     <h1>photography</h1>
@@ -273,7 +273,7 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="el Two">
 
-                <img class="P two" src="Img/SVG/WebDesign.svg" alt="">
+                <img class="P two" src="WebDesign.svg" alt="">
 
                 <div class="text">
                     <h1>web design</h1>
@@ -285,7 +285,7 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="el Thirdd">
 
-                <img class="P third" src="Img/SVG/Creativity.svg" alt="">
+                <img class="P third" src="Creativity.svg" alt="">
 
                 <div class="text">
                     <h1>creativity</h1>
@@ -303,7 +303,7 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="el our">
 
-                <img class="P four" src="Img/SVG/SEO.svg" alt="">
+                <img class="P four" src="SEO.svg" alt="">
 
                 <div class="text">
                     <h1>seo</h1>
@@ -315,7 +315,7 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="el Five">
 
-                <img class="P five" src="Img/SVG/CSSHTML.svg" alt="CSS/HTML">
+                <img class="P five" src="CSSHTML.svg" alt="CSS/HTML">
 
                 <div class="text">
                     <h1>css/html</h1>
@@ -327,7 +327,7 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="el Six">
 
-                <img class="P six" src="Img/SVG/Digital.svg" alt="">
+                <img class="P six" src="Digital.svg" alt="">
 
                 <div class="text">
                     <h1>digital</h1>
@@ -358,7 +358,7 @@
     <div class="images">
         <div class="devices">
             <img data-aos="zoom-in"
-                 data-aos-delay="0" src="Img/devices.png" alt="devices">
+                 data-aos-delay="0" src="devices.png" alt="devices">
         </div>
     </div>
 
@@ -382,7 +382,7 @@
     <div class="inner">
 
         <img data-aos="zoom-in"
-             data-aos-delay="0" class="I" src="Img/Layer%2043.jpg" alt="">
+             data-aos-delay="0" class="I" src="Layer%2043.jpg" alt="">
 
         <div class="opts">
 
@@ -391,7 +391,7 @@
 
                 <div class="top">
                     <div class="LL">
-                        <img src="Img/SVG/Photography%20v2.svg" alt="">
+                        <img src="Photography%20v2.svg" alt="">
                     </div>
                     <h1>photography</h1>
                     <div onclick="A();" class="arrow A ArAc">
@@ -425,7 +425,7 @@
 
                 <div class="top">
                     <div class="LL">
-                        <img src="Img/SVG/Creative%20v2.svg" alt="">
+                        <img src="Creative%20v2.svg" alt="">
                     </div>
 
                     <h1>creativity</h1>
@@ -459,7 +459,7 @@
 
                 <div class="top">
                     <div class="LL">
-                        <img src="Img/SVG/WebDesign%20v2.svg" alt="">
+                        <img src="WebDesign%20v2.svg" alt="">
                     </div>
 
                     <h1>web design</h1>
@@ -508,7 +508,7 @@
                     <div class="Comm">
 
                         <div class="Comphoto">
-                            <img src="Img/SVG/Message.svg" alt="">
+                            <img src="Message.svg" alt="">
                         </div>
 
                         <div class="text">
@@ -534,7 +534,7 @@
                     <div class="Comm">
 
                         <div class="Comphoto">
-                            <img src="Img/SVG/Message.svg" alt="">
+                            <img src="Message.svg" alt="">
                         </div>
 
                         <div class="text">
@@ -565,11 +565,11 @@
 
                 <div class="arrs">
                     <div onclick="L();" class="left" id="left">
-                        <img src="Img/SVG/ArrowLeft.svg" alt="">
+                        <img src="ArrowLeft.svg" alt="">
                     </div>
 
                     <div onclick="R();" class="right" id="right">
-                        <img src="Img/SVG/ArrowRight.svg" alt="">
+                        <img src="ArrowRight.svg" alt="">
                     </div>
                 </div>
 
@@ -808,17 +808,17 @@
 
     <div class="logos">
         <div data-aos="zoom-in"
-             data-aos-delay="0" class="Content" id="logo1"><img src="Img/logoOne.jpg" alt="" class="logo"></div>
+             data-aos-delay="0" class="Content" id="logo1"><img src="logoOne.jpg" alt="" class="logo"></div>
         <div data-aos="zoom-in"
-             data-aos-delay="0" class="Content" id="logo2"><img src="Img/logoTwo.jpg" alt="" class="logo"></div>
+             data-aos-delay="0" class="Content" id="logo2"><img src="logoTwo.jpg" alt="" class="logo"></div>
         <div data-aos="zoom-in"
-             data-aos-delay="0" class="Content" id="logo3"><img src="Img/logoThird.jpg" alt="" class="logo"></div>
+             data-aos-delay="0" class="Content" id="logo3"><img src="logoThird.jpg" alt="" class="logo"></div>
         <div data-aos="zoom-in"
-             data-aos-delay="0" class="Content" id="logo4"><img src="Img/logoFour.jpg" alt="" class="logo"></div>
+             data-aos-delay="0" class="Content" id="logo4"><img src="logoFour.jpg" alt="" class="logo"></div>
         <div data-aos="zoom-in"
-             data-aos-delay="0" class="Content" id="logo5"><img src="Img/logoFive.jpg" alt="" class="logo"></div>
+             data-aos-delay="0" class="Content" id="logo5"><img src="logoFive.jpg" alt="" class="logo"></div>
         <div data-aos="zoom-in"
-             data-aos-delay="0" class="Content" id="logo6"><img src="Img/logoSix.jpg" alt="" class="logo"></div>
+             data-aos-delay="0" class="Content" id="logo6"><img src="logoSix.jpg" alt="" class="logo"></div>
     </div>
 
 </section>
@@ -845,7 +845,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item1 item">
-            <img src="Img/Layer 26.jpg" alt="">
+            <img src="Layer 26.jpg" alt="">
             <div class="gallother">
                 <svg class="photoIco"
                      xmlns="http://www.w3.org/2000/svg"
@@ -862,7 +862,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item2 item">
-            <img src="Img/Layer 33.jpg" alt="">
+            <img src="Layer 33.jpg" alt="">
             <div class="gallother">
                 <svg class="photoIco"
                      xmlns="http://www.w3.org/2000/svg"
@@ -879,7 +879,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item3 item">
-            <img src="Img/Layer 34.jpg" alt="">
+            <img src="Layer 34.jpg" alt="">
             <div class="gallother other3">
                 <svg class="photoIco3"
                      xmlns="http://www.w3.org/2000/svg"
@@ -896,7 +896,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item4 item">
-            <img src="Img/Layer 31.jpg" alt="">
+            <img src="Layer 31.jpg" alt="">
             <div class="gallother">
                 <svg class="photoIco"
                      xmlns="http://www.w3.org/2000/svg"
@@ -913,7 +913,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item5 item">
-            <img src="Img/Layer 35.jpg" alt="">
+            <img src="Layer 35.jpg" alt="">
             <div class="gallother">
                 <svg class="photoIco"
                      xmlns="http://www.w3.org/2000/svg"
@@ -930,7 +930,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item6 item">
-            <img src="Img/Layer 29.jpg" alt="">
+            <img src="Layer 29.jpg" alt="">
             <div class="gallother">
                 <svg class="photoIco"
                      xmlns="http://www.w3.org/2000/svg"
@@ -947,7 +947,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="item7 item">
-            <img src="Img/Layer 32.jpg" alt="">
+            <img src="Layer 32.jpg" alt="">
             <div class="gallother">
                 <svg class="photoIco"
                      xmlns="http://www.w3.org/2000/svg"
@@ -983,7 +983,7 @@
                     <div class="Comm">
 
                         <div class="Comphoto">
-                            <img class="humanAvatar" src="Img/Layer%2036.jpg" alt="">
+                            <img class="humanAvatar" src="Layer%2036.jpg" alt="">
                         </div>
 
                         <div class="text">
@@ -1010,7 +1010,7 @@
                     <div class="Comm">
 
                         <div class="Comphoto">
-                            <img class="humanAvatar" src="Img/Layer%2036.jpg" alt="">
+                            <img class="humanAvatar" src="Layer%2036.jpg" alt="">
                         </div>
 
                         <div class="text">
@@ -1041,11 +1041,11 @@
 
                 <div class="arrs">
                     <div onclick="LeftNavArrTwo();" class="left" id="left2">
-                        <img src="Img/SVG/ArrowLeft.svg" alt="">
+                        <img src="ArrowLeft.svg" alt="">
                     </div>
 
                     <div onclick="RightNavArrTwo();" class="right" id="right2">
-                        <img src="Img/SVG/ArrowRight.svg" alt="">
+                        <img src="ArrowRight.svg" alt="">
                     </div>
                 </div>
 
@@ -1074,7 +1074,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="coment">
-            <img class="avatar humanAvatar" src="Img/Layer%2047.jpg" alt="ava">
+            <img class="avatar humanAvatar" src="Layer%2047.jpg" alt="ava">
 
             <div class="text">
                 <h1>matthew dix</h1>
@@ -1088,7 +1088,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="coment">
-            <img class="avatar humanAvatar" src="Img/Layer%2049.jpg" alt="ava">
+            <img class="avatar humanAvatar" src="Layer%2049.jpg" alt="ava">
 
             <div class="text">
                 <h1>nick karvounis</h1>
@@ -1102,7 +1102,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="coment">
-            <img class="avatar humanAvatar" src="Img/Layer%2050.jpg" alt="ava">
+            <img class="avatar humanAvatar" src="Layer%2050.jpg" alt="ava">
 
             <div class="text">
                 <h1>jaelynn castillo</h1>
@@ -1116,7 +1116,7 @@
 
         <div data-aos="zoom-in"
              data-aos-delay="0" class="coment">
-            <img class="avatar humanAvatar" src="Img/Layer%2051.jpg" alt="ava">
+            <img class="avatar humanAvatar" src="Layer%2051.jpg" alt="ava">
 
             <div class="text">
                 <h1>mike petruci</h1>
@@ -1151,7 +1151,7 @@
         <div data-aos="zoom-in"
              data-aos-delay="0" class="blog">
 
-            <img src="Img/Layer%2054.jpg" alt="">
+            <img src="Layer%2054.jpg" alt="">
 
             <div class="data">
                 <h1 class="day">15</h1>
@@ -1197,7 +1197,7 @@
         <div data-aos="zoom-in"
              data-aos-delay="0" class="blog">
 
-            <img src="Img/Layer%2055.jpg" alt="">
+            <img src="Layer%2055.jpg" alt="">
 
             <div class="data">
                 <h1 class="day">14</h1>
@@ -1243,7 +1243,7 @@
         <div data-aos="zoom-in"
              data-aos-delay="0" class="blog">
 
-            <img src="Img/Layer%2057.jpg" alt="">
+            <img src="Layer%2057.jpg" alt="">
 
             <div class="data">
                 <h1 class="day">12</h1>
@@ -1448,7 +1448,7 @@
 
                 <div data-aos="zoom-in"
                      data-aos-delay="0" class="blog">
-                    <img src="Img/photos-7884rHDsW8yqbsyN.jpg" alt="">
+                    <img src="photos-7884rHDsW8yqbsyN.jpg" alt="">
 
                     <div class="text">
                         <h1>Lorem ipsum dolor sit amet, consectetu</h1>
@@ -1459,7 +1459,7 @@
 
                 <div data-aos="zoom-in"
                      data-aos-delay="0" class="blog">
-                    <img src="Img/photos-7884lejLFH9MN8IC.jpg" alt="">
+                    <img src="photos-7884lejLFH9MN8IC.jpg" alt="">
 
                     <div class="text">
                         <h1>Consectetur adipiscing elit, sed do dsadsad</h1>
@@ -1470,7 +1470,7 @@
 
                 <div data-aos="zoom-in"
                      data-aos-delay="0" class="blog">
-                    <img src="Img/photos-7884P2smgicsZFyn.jpg" alt="">
+                    <img src="photos-7884P2smgicsZFyn.jpg" alt="">
 
                     <div class="text">
                         <h1>sed do eiusmod tempor incididunt ut labore</h1>
@@ -1491,15 +1491,15 @@
             <div data-aos="zoom-in"
                  data-aos-delay="0" class="photos">
 
-                <img class="item1" src="Img/photos-7884MJE3ABUJPTO1.jpg" alt="">
-                <img class="item2" src="Img/photos-7884MBqau4DkSE9K.jpg" alt="">
-                <img class="item3" src="Img/photos-7884M86ovdhbiWKi.jpg" alt="">
-                <img class="item4" src="Img/photos-7884rRdzNWx35XGc.jpg" alt="">
-                <img class="item5" src="Img/photos-7884W4HBOgfC6WDb.jpg" alt="">
-                <img class="item6" src="Img/photos-7884qnJlwaL4TA8x.jpg" alt="">
-                <img class="item7" src="Img/photos-78841zcS1oLCjBr4.jpg" alt="">
-                <img class="item8" src="Img/photos-78842fGoMmtuD5Z9.jpg" alt="">
-                <img class="item9" src="Img/photos-7884nwL7ruku3rhJ.jpg" alt="">
+                <img class="item1" src="photos-7884MJE3ABUJPTO1.jpg" alt="">
+                <img class="item2" src="photos-7884MBqau4DkSE9K.jpg" alt="">
+                <img class="item3" src="photos-7884M86ovdhbiWKi.jpg" alt="">
+                <img class="item4" src="photos-7884rRdzNWx35XGc.jpg" alt="">
+                <img class="item5" src="photos-7884W4HBOgfC6WDb.jpg" alt="">
+                <img class="item6" src="photos-7884qnJlwaL4TA8x.jpg" alt="">
+                <img class="item7" src="photos-78841zcS1oLCjBr4.jpg" alt="">
+                <img class="item8" src="photos-78842fGoMmtuD5Z9.jpg" alt="">
+                <img class="item9" src="photos-7884nwL7ruku3rhJ.jpg" alt="">
 
             </div>
 
@@ -1521,19 +1521,19 @@
 <!---------------Scripts --------------------------->
 
 
-<script type="text/javascript" src="Scripts/jQuery v3.5.js"></script>
+<script type="text/javascript" src="jQuery v3.5.js"></script>
 
 <!--<script type="text/javascript" src="Scripts/pace.js"></script>-->
 
 <script src="https://kodhus.com/moveit.js"></script>
 
-<script src="Scripts/gsap.js"></script>
+<script src="gsap.js"></script>
 
-<script src="Scripts/ScrollToPlugin.js"></script>
+<script src="ScrollToPlugin.js"></script>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<script src="Scripts/moveit.js"></script>
+<script src="moveit.js"></script>
 
 <script type="text/javascript" src="Main.js"></script>
 
