--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 <noscript>
     <h1>Please put on javascript in your browser!!!! this site need javascript to fork</h1>
 </noscript>
-
+<div class="overlay">
+    <div class="overlay-content"></div>
+</div>
+    
+    
+<div class="background-content">
 <!--PRELOADER-->
 
 <div id="preLoader" class="preloader">
@@ -1516,7 +1521,7 @@
     </div>
 
 </footer>
-
+</div>
 
 <!---------------Scripts --------------------------->
 
