--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 </head>
 
-<body translate="no">
+<body translate="no" class="BodyScLock">
 <noscript>
     <h1>Please put on javascript in your browser!!!! this site need javascript to fork</h1>
 </noscript>
