--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             </div>
 
         </div>
-
+        <div class="scroll_icon">
+          <div class="scroll_whiteVie"></div>
+        </div>
     </div>
 
 </section>
